# sprocket

./: .example.env  Makefile  README.md  alembic.ini  fill_database.py  pyproject.toml  pytest.ini  start_api_third.py  start_server.py
.github/workflows/: tests.yml
setup/docker/: Dockerfile  docker-compose.yml
src/: __init__.py
src/application/: app.py  celery_worker.py  container.py
src/application/celery_tasks/: tasks.py
src/application/routers/: __init__.py  root.py
src/application/routers/factory/: __init__.py  factory.py
src/application/routers/sprocket_data_factory/: __init__.py  sprocket_data_factory.py
src/application/routers/sprocket_type/: __init__.py  sprocket_type.py
src/domain/entities/: factory.py  sprocket.py  sprocket_factory_data.py
src/domain/repositories/: api.py  factory_repository.py  sprocket_factory_data_repository.py  sprocket_repository.py
src/domain/services/: factory_service.py  sprocket_factory_data_service.py  sprocket_service.py
src/infraestructure/api/repositories/: api_third_repository.py
src/infraestructure/cellery/: config.py
src/infraestructure/config/: enviroment.py
src/infraestructure/database/: seeds.py  sqlalchemy.py
src/infraestructure/database/alembic/: env.py
src/infraestructure/database/models/: factory.py  sprocket_factory_data.py  sprocket_type.py
tests/factories/: entity_factories.py  model_factories.py
tests/integration/: conftest.py
tests/integration/application/: sprocket_data_factory_test.py
tests/unit/domain/: conftest.py
tests/utils/: utils.py
(+8 files in other folders)
