[tool.poetry]
name = "sprocket"
version = "0.1.0"
description = ""
authors = ["Vito Huanqui <vito.huanqui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
sqlalchemy = "^2.0.28"
databases = "^0.9.0"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
toolz = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
