[tool.poetry]
name = "sprocket"
version = "0.1.0"
description = ""
authors = ["Vito Huanqui <vito.huanqui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
sqlalchemy = "^2.0.28"
databases = "^0.9.0"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
toolz = "^0.12.1"
pydantic-settings = "^2.2.1"
asyncpgsa = "^0.27.1"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
celery = {extras = ["redis"], version = "^5.3.6"}
flower = "^2.0.1"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
pytest-factoryboy = "^2.7.0"
pytest-mock = "^3.14.0"
black = "^24.3.0"
autoflake = "^2.3.1"
isort = "^5.13.2"
httpx = "^0.27.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.43.0"}
slack-sdk = "^3.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
seeder = "sprocket.setup:seeder"
web_server = "sprocket.setup:web_server"
